Language icon alignment in Local Contexts notices in footer (Fixes #27)

--- a/asset/sass/components/local-contexts/_local-contexts.scss
+++ b/asset/sass/components/local-contexts/_local-contexts.scss
@@ -8,7 +8,10 @@
         padding: 1rem;
     }
 
-    .language {
-        margin-left: 10px;
+    .notice-name {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin-bottom: 10px;
     }
 }
